Fix inline code collapsing spaces (#2330)
* Updated to prevent spaces from collapsing while inside inline code blocks

* Added changeset

* Add comment

--- a/src/markdown/code.scss
+++ b/src/markdown/code.scss
@@ -10,6 +10,7 @@
     font-size: 85%;
     background-color: var(--color-neutral-muted);
     border-radius: $border-radius;
+    white-space: break-spaces; // keeps rendering spaces, but breaks them onto multiple lines 
 
     br { display: none; }
   }
